--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -7,16 +7,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.bravelittlescientist.android_puzzle_view.LaunchActivity"
-    android:onClick="launchPuzzle">
+    android:onClick="launchPuzzle"
+    android:background="@drawable/backgroundlaunch"
+    android:scaleType = "centerCrop">
 
     <TextView
         android:text="PUZZLE ANDROID \n\n Clique pour commencer à jouer"
-        android:textColor="@android:color/secondary_text_light"
+        android:textColor="@android:color/holo_orange_dark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:textSize="30sp"
+        android:textSize="40sp"
         />
 
 </RelativeLayout>
