--- a/app/src/main/res/layout/activity_game_menu.xml
+++ b/app/src/main/res/layout/activity_game_menu.xml
@@ -66,7 +66,7 @@
     <Button
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:text="Personnel"
+        android:background="@drawable/choix_image"
         android:id="@+id/button5"
         android:onClick="launchChoice"
         android:layout_weight="0.3"
