--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -12,6 +12,7 @@
     android:scaleType = "centerCrop">
 
     <TextView
+        android:id="@+id/title"
         android:text="PUZZLE ANDROID \n\n Clique pour commencer à jouer"
         android:textColor="@android:color/holo_orange_dark"
         android:layout_width="wrap_content"
@@ -21,6 +22,6 @@
         android:textSize="40sp"
         android:textColorHighlight="@android:color/holo_orange_dark"
         android:textIsSelectable="false"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
 </RelativeLayout>
